Bug 275376 - Indent of first line in list wrong
Summary: Indent of first line in list wrong
Status: RESOLVED FIXED
Alias: None
Product: calligracommon
Classification: Applications
Component: text-layout (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Calligra Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-11 04:37 UTC by T Zachmann
Modified: 2011-06-11 05:54 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
File showing the problem (10.38 KB, application/octet-stream)
2011-06-11 04:41 UTC, T Zachmann
Details

Note You need to log in before you can comment on or make changes to this bug.
Description T Zachmann 2011-06-11 04:37:25 UTC
Version:           unspecified (using KDE 4.6.4) 
OS:                Linux

The indent of the first line in a list is not ok. Please see the attached document.

Reproducible: Always



Expected Results:  
The first line in a list item should be indented correctly
Comment 1 T Zachmann 2011-06-11 04:41:20 UTC
Created attachment 60876 [details]
File showing the problem

The first line in a list item should start at the same position as the second line in the attached document
Comment 2 T Zachmann 2011-06-11 05:54:56 UTC
Git commit 989b263215987c31a367e16a1f890ab8057e484b by Thorsten Zachmann.
Committed on 11/06/2011 at 05:12.
Pushed by zachmann into branch 'master'.

Fix 275376 - Indent of first line in list wrong

Thanks to Matus Uzak for providing the updates to the mswords filter
which are part of the patch.

BUG: 275376

M  +11   -7    filters/words/msword-odf/paragraph.cpp     
M  +9    -2    filters/words/msword-odf/paragraph.h     
M  +43   -21   filters/words/msword-odf/texthandler.cpp     
M  +6    -2    libs/kotext/styles/KoListLevelProperties.cpp     
M  +20   -15   libs/textlayout/KoTextLayoutArea.cpp     

http://commits.kde.org/calligra/989b263215987c31a367e16a1f890ab8057e484b