Fix 275376 - Indent of first line in list wrong

Thanks to Matus Uzak for providing the updates to the mswords filter
which are part of the patch.

BUG: 275376